0x02-functions_nested_loops/2-print_alphabet_x10.c:
2-print_alphabet_x10.c:16:1: error: implicit declaration of function ‘_putchar’; did you mean ‘putchar’? [-Werror=implicit-function-declaration]
   16 | _putchar(c);
      | ^~~~~~~~
      | putchar
cc1: all warnings being treated as errors
main.c: In function ‘main’:
main.c:10:2: error: implicit declaration of function ‘print_alphabet_x10’ [-Werror=implicit-function-declaration]
   10 |  print_alphabet_x10();
      |  ^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
